--- a/style.css
+++ b/style.css
@@ -214,6 +214,15 @@ a img.aligncenter {
   z-index: 100000;
   /* Above WP toolbar. */ }
 
+.wrapper {
+  background-color: white;
+  padding: .5em; }
+
+.wrapper:after {
+  content: '';
+  display: block;
+  clear: both; }
+
 @media screen and (min-width: 600px) {
   nav li {
     display: inline-block; }
@@ -246,7 +255,14 @@ a img.aligncenter {
 
   /*make the header taller on just the home page*/
   .home #header {
-    padding-top: 50vh;
-    background-color: #eee; } }
+    padding-top: 30vh;
+    background-color: #eee; }
+
+  .custom-logo {
+    max-width: 80px;
+    height: auto; }
+
+  .home .custom-logo {
+    max-width: 150px; } }
 
 /*# sourceMappingURL=style.css.map */
