--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 Theme Name: Plattypus
 Author: Gabe Neri
@@ -6,122 +5,383 @@ Version: 0.1
 License: GPLv3
 Description: A very simple theme for learning Wordpress
 */
+/* todo: remove this later */
+@import "https://fonts.googleapis.com/css?family=Lato:400,400i,700|Playfair+Display:400,900";
+/* Source SCSS is at http://codepen.io/melissacabral/pen/xOaYgq */
 body {
-  background: purple;
-  max-width: 60em;
-  margin: 0 auto;
-  font-family: 'Lato', Calibri, Arial, sans-serif; }
+  margin: 0;
+  font-family: sans-serif;
+  font-family: Lato, arial, sans-serif;
+  color: black;
+  background: #eee; }
 
-#header,
-#footer,
-#content,
-#sidebar {
-  padding: 2%;
+.wrapper {
+  max-width: 75em;
+  margin: 0 auto; }
+  @media (min-width: 700px) {
+    .wrapper {
+      padding: 2%; } }
+
+* {
   box-sizing: border-box; }
 
-a {
-  color: dodgerblue;
-  text-decoration: none; }
-
-a:hover,
-a:focus {
-  color: darkgoldenrod;
-  text-decoration: underline; }
-
-nav {
-  background: #eee;
-  margin: 1em 0; }
-
-nav ul,
-nav li {
-  margin: 0;
-  padding: 0;
-  position: relative; }
-
-nav ul ul {
-  display: none; }
-
-nav a {
-  display: block;
-  padding: .5em; }
-
-nav a:hover {
-  background: #ddd;
-  text-decoration: none; }
-
-.current_page_item, .current_page_ancestor {
-  background-color: yellow; }
-
-article {
-  margin-bottom: 3em; }
-
-.postmeta {
-  clear: both;
-  background: #eee;
-  padding: .2em;
-  font-size: .9em; }
-
-.postmeta span:not(:last-child) {
-  border-right: solid 1px #ccc;
-  margin-right: .3em;
-  padding-right: .3em; }
-
-/*
-== misc HTML tags
-*/
-pre {
-  background-color: #eee;
-  padding: .2em;
-  overflow-x: scroll;
-  /*white-space: pre-wrap; */ }
-
-/*
-== images
-*/
 img {
   max-width: 100%;
   height: auto; }
 
-article * {
-  max-width: 100%; }
+#header {
+  text-align: center;
+  color: white;
+  background-image: url("http://lorempixel.com/output/abstract-q-c-1200-400-9.jpg");
+  background-size: cover;
+  /* == menu */ }
+  @media (min-width: 700px) {
+    #header {
+      min-height: 40vh;
+      text-align: left;
+      border-bottom: solid 3px dodgerblue; } }
+  #header h2 {
+    display: none; }
+    @media (min-width: 700px) {
+      #header h2 {
+        display: block; } }
+  #header a {
+    color: white; }
+  #header .custom-logo-link {
+    display: block;
+    background-color: dodgerblue;
+    overflow: hidden; }
+    @media (min-width: 700px) {
+      #header .custom-logo-link {
+        width: 180px;
+        height: 50px; } }
+    #header .custom-logo-link img {
+      max-width: 100%;
+      height: auto; }
+  #header h1 {
+    background: #000;
+    margin: 0;
+    line-height: 50px;
+    font-size: 16px; }
+    #header h1:after {
+      display: block;
+      content: '';
+      clear: both; }
+  #header .search-form input {
+    color: black; }
+  @media (min-width: 700px) {
+    #header .search-form {
+      z-index: 50;
+      position: absolute;
+      top: 60px;
+      right: 1em; } }
+  #header .header-bar {
+    background: rgba(0, 0, 0, 0.6); }
+    #header .header-bar:after {
+      display: block;
+      content: '';
+      clear: both; }
+    @media (min-width: 700px) {
+      #header .header-bar {
+        background: black;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 100; }
+        .admin-bar #header .header-bar {
+          top: 46px; } }
+    @media screen and (min-width: 700px) and (min-width: 783px) {
+      .admin-bar #header .header-bar {
+        top: 32px; } }
 
-/*
-== tags widget
-*/
-#tags a:after {
-  content: ' |';
-  color: #ccc; }
+    @media (min-width: 700px) {
+      #header .header-bar nav {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background: #000;
+        margin-left: 180px;
+        /* space for logo */ } }
+    #header .header-bar ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none; }
+    #header .header-bar li {
+      width: 100%;
+      border-bottom: solid 1px gray;
+      border-right: solid 1px gray;
+      position: relative; }
+      #header .header-bar li:hover > a {
+        background: dodgerblue; }
+      @media (min-width: 700px) {
+        #header .header-bar li {
+          display: inline-block;
+          float: none;
+          width: auto;
+          border: none; } }
+      #header .header-bar li a {
+        padding: 2.5%;
+        display: block; }
+        #header .header-bar li a:hover, #header .header-bar li a:focus {
+          background: dodgerblue; }
+        @media (min-width: 700px) {
+          #header .header-bar li a {
+            padding: 0 1em;
+            line-height: 50px; } }
+      #header .header-bar li ul {
+        display: none;
+        background: rgba(30, 144, 255, 0.6);
+        min-width: 320px; }
+        @media (min-width: 700px) {
+          #header .header-bar li ul {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            z-index: 100; } }
+        #header .header-bar li ul li {
+          display: block;
+          float: none; }
+      #header .header-bar li:hover ul {
+        display: block; }
 
-#tags a:last-child:after {
-  content: ''; }
+#content {
+  padding: 2%;
+  background: white;
+  /* full width main content*/ }
+  @media (min-width: 700px) {
+    #content {
+      box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); } }
+  @media (min-width: 700px) {
+    #content {
+      width: 68%;
+      float: left;
+      position: relative;
+      top: -6em; } }
+  #content .hentry {
+    margin: 2em 0;
+    line-height: 1.5;
+    font-size: 1.1em; }
+    #content .hentry .postmeta {
+      background: rgba(0, 0, 0, 0.1);
+      padding: 2%;
+      font-size: .8em;
+      clear: both; }
+      #content .hentry .postmeta span {
+        padding-right: 1.4em;
+        opacity: .7; }
+  #content .hentry .wp-post-image.size-thumbnail {
+    float: right;
+    margin-left: 1em; }
+  .page-template-template-no-sidebar #content, .home.page #content {
+    width: 98%;
+    float: none;
+    left: 0; }
 
-/*
-== wordpress-generated class
-*/
-/*post class*/
-.sticky:before {
-  content: 'Important Post:';
-  display: block;
-  border-bottom: solid 1px #ccc;
-  color: #bbb;
-  text-transform: uppercase;
-  font-size: .9em; }
+@media (min-width: 700px) {
+  #sidebar {
+    width: 30%;
+    float: right; } }
+#sidebar ul li {
+  padding-left: 1rem; }
+.home #sidebar {
+  width: 100%;
+  float: none; }
 
-/*post formats*/
-.format-quote, blockquote {
-  background-color: #eee;
-  padding: .5em; }
+#footer {
+  clear: both;
+  padding: 2%;
+  border-top: solid 1px rgba(0, 0, 0, 0.15); }
 
-/*fancy quotes*/
-.format-quote, blockquote {
-  quotes: "ΓÇ£" "ΓÇ¥" "ΓÇÿ" "ΓÇÖ"; }
+/* ==typography */
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Playfair Display', Georgia, serif;
+  font-weight: 900; }
 
-.format-quote:before, blockquote:before {
-  content: open-quote;
-  font-family: georgia, serif;
-  font-size: 4em;
-  color: #aaa; }
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none; }
 
+a {
+  text-decoration: none;
+  color: darkslategray; }
+
+/* ==pagination */
+.pagination {
+  text-align: center;
+  clear: both; }
+  .pagination a, .pagination span {
+    background: rgba(0, 0, 0, 0.1);
+    padding: .5em 3%;
+    display: inline-block;
+    margin: .1em; }
+  .pagination .current {
+    background: dodgerblue;
+    color: white; }
+  .pagination .dots {
+    background: transparent; }
+
+/* ==galleries */
+.gallery {
+  padding: .5vw;
+  font-size: 0;
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  -ms-flex-direction: column;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: flex; }
+  .gallery .gallery-item {
+    position: relative;
+    -webkit-box-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    width: 200px;
+    margin: .5vw; }
+    .gallery .gallery-item img {
+      width: 100%;
+      height: auto; }
+  .gallery .gallery-caption {
+    font-size: 16px;
+    font-size: 1rem;
+    padding: .5em;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 100%;
+    display: block; }
+    .gallery .gallery-caption h1, .gallery .gallery-caption h2, .gallery .gallery-caption h3, .gallery .gallery-caption p {
+      margin: 0 0 .5em 0; }
+
+/*  ==widgets */
+.widget {
+  padding: 1em; }
+  .widget.widget_calendar table {
+    table-layout: fixed;
+    width: 100%; }
+    .widget.widget_calendar table td, .widget.widget_calendar table th {
+      background: white;
+      padding: 4% 3%;
+      text-align: center;
+      vertical-align: center; }
+    .widget.widget_calendar table th {
+      background-color: dodgerblue; }
+    .widget.widget_calendar table #today {
+      background: rgba(30, 144, 255, 0.2); }
+  #footer .widget {
+    font-size: .8em;
+    width: 50%;
+    float: left; }
+    #footer .widget:nth-child(2n+1) {
+      clear: both; }
+    @media (min-width: 700px) {
+      #footer .widget {
+        width: 33%;
+        float: left; }
+        #footer .widget:nth-child(2n+1) {
+          clear: none; }
+        #footer .widget:nth-child(3n+1) {
+          clear: both; } }
+    @media (min-width: 1000px) {
+      #footer .widget {
+        width: 25%; }
+        #footer .widget:nth-child(3n+1) {
+          clear: none; }
+        #footer .widget:nth-child(4n+1) {
+          clear: both; } }
+  .home #sidebar .widget {
+    width: 48%;
+    margin-right: 2%;
+    margin-bottom: 10%;
+    float: left;
+    padding: 2%;
+    background: white; }
+    @media (min-width: 700px) {
+      .home #sidebar .widget {
+        box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); } }
+    .home #sidebar .widget:nth-child(2n+1) {
+      clear: both; }
+    @media (min-width: 700px) {
+      .home #sidebar .widget {
+        width: 31.333%;
+        float: left; }
+        .home #sidebar .widget:nth-child(2n+1) {
+          clear: none; }
+        .home #sidebar .widget:nth-child(3n+1) {
+          clear: both; } }
+
+/* == products */
+.home .featured-products ul {
+  padding: .5vw;
+  font-size: 0;
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  -ms-flex-direction: column;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: flex; }
+  .home .featured-products ul li {
+    position: relative;
+    -webkit-box-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    width: 200px;
+    margin: .5vw; }
+    .home .featured-products ul li img {
+      width: 100%;
+      height: auto; }
+  .home .featured-products ul .caption {
+    font-size: 16px;
+    font-size: 1rem;
+    padding: .5em;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 100%;
+    display: block; }
+    .home .featured-products ul .caption h1, .home .featured-products ul .caption h2, .home .featured-products ul .caption h3, .home .featured-products ul .caption p {
+      margin: 0 0 .5em 0; }
+
+.post-type-archive-product .product-grid {
+  padding: .5vw;
+  font-size: 0;
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  -ms-flex-direction: column;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: flex; }
+  .post-type-archive-product .product-grid article {
+    position: relative;
+    -webkit-box-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    width: 300px;
+    margin: .5vw; }
+    .post-type-archive-product .product-grid article img {
+      width: 100%;
+      height: auto; }
+  .post-type-archive-product .product-grid .caption {
+    font-size: 16px;
+    font-size: 1rem;
+    padding: .5em;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 100%;
+    display: block; }
+    .post-type-archive-product .product-grid .caption h1, .post-type-archive-product .product-grid .caption h2, .post-type-archive-product .product-grid .caption h3, .post-type-archive-product .product-grid .caption p {
+      margin: 0 0 .5em 0; }
+
+.price {
+  color: dodgerblue; }
+
+/* ==wordpress core */
 .alignnone {
   margin: 5px 20px 20px 0; }
 
@@ -186,10 +446,10 @@ a img.aligncenter {
   padding: 0 4px 5px; }
 
 /* Text meant only for screen readers. */
-.screen-reader-text {
+.screen-reader-text,
+header h2 {
   clip: rect(1px, 1px, 1px, 1px);
   position: absolute !important;
-  white-space: nowrap;
   height: 1px;
   width: 1px;
   overflow: hidden; }
@@ -214,55 +474,10 @@ a img.aligncenter {
   z-index: 100000;
   /* Above WP toolbar. */ }
 
-.wrapper {
-  background-color: white;
-  padding: .5em; }
+.commentlist li {
+  padding-left: 1em; }
 
-.wrapper:after {
-  content: '';
-  display: block;
-  clear: both; }
-
-@media screen and (min-width: 600px) {
-  nav li {
-    display: inline-block; }
-
-  nav ul ul {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    background: #eee; }
-
-  nav ul li:hover ul {
-    display: block; }
-
-  #content {
-    float: left;
-    width: 70%; }
-
-  #sidebar {
-    float: right;
-    width: 30%; }
-
-  #footer {
-    border-top: solid 1px #ddd;
-    clear: both;
-    text-align: center; }
-
-  img.attachment-medium {
-    float: right;
-    margin: 0 0 1em 1em; }
-
-  /*make the header taller on just the home page*/
-  .home #header {
-    padding-top: 30vh;
-    background-color: #eee; }
-
-  .custom-logo {
-    max-width: 80px;
-    height: auto; }
-
-  .home .custom-logo {
-    max-width: 150px; } }
+.sticky, .gallery-caption, .bypostauthor {
+  text-decoration: none; }
 
 /*# sourceMappingURL=style.css.map */
